--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 python:
   - "3.6"
 dist: trusty
-addons:
-  chrome: stable
-before_install:
-  - # start your web application and listen on `localhost`
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+#addons:
+#  chrome: stable
+#before_install:
+#  - # start your web application and listen on `localhost`
+#  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 install: "pip install -r requirements.txt"
-script: pytest
+script: py.test
