Include correct async pytest package

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ dist: trusty
 #before_install:
 #  - # start your web application and listen on `localhost`
 #  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-install: "pip install -r requirements.txt"
+install: "pip install -r dev_requirements.txt"
 script: py.test
