--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 0.2.1-alpha
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<release>.*)
+current_version = 0.2.2-dev
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
 commit = True
 tag = True
 serialize =
@@ -10,6 +10,7 @@ serialize =
 [bumpversion:file:setup.py]
 
 [bumpversion:part:release]
-optional_value = alpha
+optional_value = gamma
 values =
-	alpha
+  dev
+  gamma
