--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,10 @@
 [bumpversion]
-current_version = 0.2.2-dev
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
+current_version = 0.2.2
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
 commit = True
 tag = True
 serialize =
-	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
 [bumpversion:file:setup.py]
 
-[bumpversion:part:release]
-optional_value = gamma
-values =
-  dev
-  gamma
